--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
 *.iws
-*Db.properties
-*Db.script
 .settings
-stacktrace.log
 /*.zip
 /*.sha1
 /plugin.xml
-/*.log
-/*DB.*
+*.log
 /cobertura.ser
 .DS_Store
 /target/
 /out/
-/web-app/plugins
-/web-app/WEB-INF/classes
 /.link_to_grails_plugins/
 /target-eclipse/
 
