--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
@@ -53,6 +54,7 @@ dependencies {
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.1.1.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.1.Final"
+    compile "com.github.jitpack:gradle-simple:1.0"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web-plugin"
     provided "org.grails:grails-plugin-services"
@@ -69,31 +71,6 @@ dependencies {
 
 task wrapper(type: Wrapper) {
     gradleVersion = gradleWrapperVersion
-}
-
-bintray {
-    pkg {
-        userOrg = 'goodstartgenetics' //publish to an organization
-        repo = 'grails3-plugins'
-        name = "$project.name"
-        issueTrackerUrl = "https://github.com/alexkramer/ZipCityState/issues"
-        vcsUrl = "https://github.com/alexkramer/ZipCityState"
-        version {
-            attributes = ['grails-plugin': "$project.group:$project.name"]
-            name = project.version
-        }
-    }
-}
-
-grailsPublish {
-    userOrg = 'goodstartgenetics'
-    githubSlug = 'ZipCityState'
-    license {
-        name = 'Apache-2.0'
-    }
-    title = 'Zip City State Plugin'
-    desc = '''Provides utilities to populate the US City and State from the provided 5 digit Zip code.'''
-    developers = [ alexkramer: 'Alex Kramer', gpottepalem: 'Giri Pottepalem']
 }
 
 assets {
