--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext {
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencyManagement {
@@ -54,7 +55,7 @@ dependencies {
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.1.1.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.1.Final"
-    compile "com.github.jitpack:gradle-simple:1.0"
+    compile "com.github.jitpack:gradle-simple:1.0.5"
     console "org.grails:grails-console"
     profile "org.grails.profiles:web-plugin"
     provided "org.grails:grails-plugin-services"
@@ -65,8 +66,6 @@ dependencies {
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
-
-    //compile 'org.grails:grails-datastore-rest-client'
 }
 
 task wrapper(type: Wrapper) {
