--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
-*.iws
-.settings
-/*.zip
-/*.sha1
-/plugin.xml
-*.log
-/cobertura.ser
+Thumbs.db
 .DS_Store
-/target/
-/out/
-/.link_to_grails_plugins/
-/target-eclipse/
-
-# project files
-/.classpath
-/.project
-*.iml
-/.idea
-
+.gradle
 build/
-.gradle/
+out/
+.idea
+*.iml
+*.ipr
+*.iws
+.project
+.settings
+.classpath
